--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         </section>
     </main>
 
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
